--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -92,6 +92,7 @@ body.dark {
     --ion-color-step-950: #f2f2f2;
     --ion-toolbar-background: #0d0d0d;
     --ion-item-background: #000000;
+    --ion-item-border-color: white;
     --ion-card-background: #1c1c1d;
 }
 
@@ -127,6 +128,7 @@ body.dark {
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
     --ion-item-background: #1e1e1e;
+    --ion-item-border-color: white;
     --ion-toolbar-background: #1f1f1f;
     --ion-tab-bar-background: #1f1f1f;
     --ion-card-background: #1e1e1e;
